--- a/mixelixir/styles/Home.module.css
+++ b/mixelixir/styles/Home.module.css
@@ -6,7 +6,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: black;
+  background-color: white;
 }
 
 .main {
